# ifd

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
data/meshes/mesh1/: boundary  cells  faces  points
include/ifd_lib/: mesh.hpp  operators.hpp  utils.hpp  vtkwriter.hpp
src/: CMakeLists.txt  mesh.cpp
